// ============ GOLD LAYER: Trend Data Mart ============
// A separate star schema (Postgres schema `gold`), distinct from the backend
// ERD that serves the site. Loaded from each scrape run's pipeline output,
// never from the backend tables, and holding no foreign keys into them, so
// re-importing jobs (new job_id values) or TRUNCATE company CASCADE never
// deletes trend history. Foreign keys only exist inside the star.

// ---------- Skill demand over time (DOC-13) ----------
// Migration: backend/app/sql/doc13_skill_trend_migration.sql
// Design notes: document/gold-trend-mart/README.md

Table gold.fact_job_skill_month {
  month_key int [not null, ref: > gold.dim_month.month_key]
  job_key bigint [not null, ref: > gold.dim_job.job_key]
  skill_key bigint [not null, ref: > gold.dim_skill.skill_key]
  first_seen_at timestamptz [not null, note: 'first completed run this month that listed the skill for the job']
  last_seen_at timestamptz [not null, note: 'last completed run this month that listed it; equals the month snapshot time when the job was still open at month end']

  indexes {
    (month_key, job_key, skill_key) [pk]
    (month_key, last_seen_at)
    (skill_key, month_key)
  }

  Note: 'Grain: one row per (month, AV job, skill). A job has one row per month it was open (one-to-many from dim_job and dim_month). Repeated runs in a month only move first/last seen.'
}

Table gold.dim_month {
  month_key int [pk, note: 'yyyymm, e.g. 202608 (UTC)']
  month_start date [not null, unique]
  year smallint [not null]
  month smallint [not null]
  label text [not null, note: 'e.g. Aug 2026']
}

Table gold.dim_skill {
  skill_key bigint [pk, increment, note: 'surrogate']
  normalized_name text [not null, note: 'natural key with skill_type; same normalization as the backend skill table']
  skill_type varchar [not null]
  display_name text [not null, note: 'e.g. ROS 2']

  indexes {
    (normalized_name, skill_type) [unique]
  }
}

Table gold.dim_job {
  job_key bigint [pk, increment, note: 'surrogate']
  deduplication_key text [not null, unique, note: 'natural key (md5 hex from the pipeline dedup step) - same across scrapes and re-imports, unlike job_id']
  title text [not null, note: 'type-1: latest value wins']
  main_type text [note: 'category area, type-1']
  first_seen_at timestamptz [not null]
  last_seen_at timestamptz [not null, note: 'lets an out-of-order backfill keep the newest attributes']
}

Table gold.scrape_run {
  run_id uuid [pk, default: `gen_random_uuid()`]
  scraped_at timestamptz [not null, unique, note: 'when the scrape ran; a run is loaded at most once']
  source varchar [not null, default: 'live', note: 'live or backfill (replayed from MinIO)']
  completed boolean [not null, default: false, note: 'only completed runs write facts; the latest completed run of a month is its snapshot']
  classifier_version text [note: 'classifier/prompt version that produced the run; explains steps in the chart']
  jobs_seen int
  created_at timestamptz [not null, default: `now()`]

  Note: 'Load log, not part of the star.'
}

Table gold.skill_trend_monthly {
  month_key int
  month date
  month_label text
  snapshot_at timestamptz [note: 'scraped_at of the latest completed run of the month']
  skill_name text
  skill_normalized_name text
  skill_type varchar
  job_count int [note: 'distinct snapshot jobs that listed the skill']
  jobs_with_skills int [note: 'distinct snapshot jobs with at least one skill']
  share numeric [note: 'job_count / jobs_with_skills']
  rank int [note: 'per month, ties broken by name, so ranks are unique']

  Note: 'VIEW, not a table - the month-end snapshot of fact_job_skill_month joined to dim_month and dim_skill. Feeds the skill rank (bump) chart.'
}

// ---------- Earlier draft (#14), not implemented ----------
// Category trends could later reuse the star above (a dim_category and a
// job-category fact) instead of this table.
Table gold.CategoryTrendSnapshot {
  snapshot_id uuid [pk, default: `gen_random_uuid()`]
  scrape_id uuid [note: 'references silver.ScrapeLog.scrape_id, kept as plain field since this mart is decoupled from Silver schema']
  category_id uuid [note: 'references silver.Category.category_id']
  company_id uuid [note: 'nullable - null means aggregated across all companies; references silver.Company.company_id']
  job_count int
  snapshot_date date
}
